--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Quang Pham",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "errorhandler": "^1.5.1",
@@ -22,11 +25,12 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "sequelize": "^6.37.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/errorhandler": "^1.5.3",
     "@types/express": "^5.0.1",
