--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
     "@types/errorhandler": "^1.5.3",
     "@types/express": "^5.0.1",
     "@types/express-rate-limit": "^6.0.2",
+    "@types/jest": "^29.5.12",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.9",
     "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2"
+    "ts-jest": "^29.3.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
