--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,17 @@
     "compilerOptions": {
       "target": "es2016",
       "module": "commonjs",
-      "rootDir": "./src",
+      "rootDir": ".",
       "outDir": "./dist",
       "esModuleInterop": true,
       "forceConsistentCasingInFileNames": true,
       "strict": true,
       "skipLibCheck": true,
-      "types": ["node"],
+      "types": ["node", "jest"],
       "noEmitOnError": true,
       "declaration": false,
       "emitDeclarationOnly": false
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "tests"],
     "exclude": ["node_modules", "dist", "src/**/*.d.ts"]
-  }
+}
